--- a/Java/.classpath
+++ b/Java/.classpath
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry excluding="Exercise8_4.java|ex18_01_filereader/FileReaderExample1.java|personal/Chained_exception.java|personal/CustomException_jungseok.java|ex10_02/math/PackageExample2.java|ex09_09_enum/OldExample2.java|ex09_03_upcasting/Example_error.java|ex09_03_upcasting/Example2_error.java|ex09_02_null/RefTypeExample.java|ex08_08_abstract_class/InheritanceExample5_error.java|ex08_07_final_method_error/CreditLineAccount.java|ex08_06_final_class_error/Account.java|ex08_06_final_class_error/BonusPointAccount.java|ex07_08_private_field/Circle_Main_error.java|ex07_00_object/HomeWork_ref.java|ex06_2_method/MethodExample2.java|ex04_02_local_variable_init_error/Local2.java|ex04_02_local_variable_init_error/Local5.java|ex04_02_local_variable_init_error/Local3.java" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry excluding="ex04_02_local_variable_init/|ex04_02_local_variable_init_error/|ex03_4_casting/Casting1_int_double.java|ex03_4_casting/Casting1_int_double2.java|ex06_1_array/ArrayExample1.java|ex06_2_method/MethodExample2.java|personal/|ex07_00_object/HomeWork_ref.java|ex07_08_private_field/Circle_Main.java|ex07_08_private_field/Circle_Main_error.java|ex07_08_private_field2/Circle_Main_error.java|ex08_06_final_class/|ex08_06_final_class_error/|ex08_07_final_method_error/|ex08_08_abstract_class/InheritanceExample5_error.java|ex09_02_null/|ex09_03_upcasting/Example_error.java|ex09_03_upcasting/Example2_error.java|ex09_08_enum_need/copy/OldExample2.java|ex09_09_enum/OldExample2.java|ex10_02/math/PackageExample2.java|boj/Trie.java|boj/HelloWorld.java|boj/HelloWorld_2557.java|boj/AplusB_1000.java|boj/AminusB_1001.java|boj/AmultiB_10998.java|boj/AdivideB_1008.java|boj/AcalcB_10869.java|boj/Expression_10926.java|boj/Budda_18108.java|boj/ABC_10430.java|boj/Cat_10171.java|boj/Dog_10172.java|boj/LongPlus_11382.java|boj/Multiply_2588.java" kind="src" path="src"/>
-=======
-	<classpathentry excluding="ex04_02_local_variable_init/|ex04_02_local_variable_init_error/|ex03_4_casting/Casting1_int_double.java|ex03_4_casting/Casting1_int_double2.java|ex06_1_array/ArrayExample1.java|ex06_2_method/MethodExample2.java|personal/|ex07_00_object/HomeWork_ref.java|ex07_08_private_field/Circle_Main.java|ex07_08_private_field/Circle_Main_error.java|ex07_08_private_field2/Circle_Main_error.java|ex08_06_final_class/|ex08_06_final_class_error/|ex08_07_final_method_error/|ex08_08_abstract_class/InheritanceExample5_error.java|ex09_02_null/|ex09_03_upcasting/Example_error.java|ex09_03_upcasting/Example2_error.java|ex09_08_enum_need/copy/OldExample2.java|ex09_09_enum/OldExample2.java|ex10_02/math/PackageExample2.java|ex18_01_filereader/FileReaderExample1.java" kind="src" path="src"/>
->>>>>>> branch 'main' of https://github.com/Salbul-mo/HTA_Eclipse.git
 	<classpathentry kind="output" path="bin"/>
 </classpath>
