--- a/jQuery/bin/.gitignore
+++ b/jQuery/bin/.gitignore
@@ -1,3 +1,39 @@
+/01_01.html
+/01_02_Base.html
+/01_02_Base2_error.html
+/01_03_dollar(document).html
+/01_04_Select_All.html
+/01_04_Select_Class.html
+/01_04_Select_Class2.html
+/01_04_Select_Class3.html
+/01_04_Select_Id.html
+/01_04_Select_Id2.html
+/01_04_Select_Id3.html
+/01_04_Select_Id4.html
+/01_04_Select_TagName.html
+/01_04_Select_TagName2.html
+/01_04_Select_TagPseudo.html
+/01_05_Descendent_Selector.html
+/01_05_Descendent_Selector2.html
+/01_05_Descendent_Selector3.html
+/01_06_Attribute_Selector.html
+/01_06_Attribute_Selector2.html
+/01_07_Filter_Selector.html
+/01_07_Filter_Selector2.html
+/01_07_Filter_Selector3.html
+/01_07_Filter_Selector4.html
+/01_07_Filter_Selector5_1.html
+/01_07_Filter_Selector5_2.html
+/01_07_Filter_Selector5_3.html
+/01_07_Filter_Selector5_4.html
+/01_07_Filter_Selector5_5.html
+/01_08_AddClass.html
+/01_08_AddClass2_1.html
+/01_08_AddClass2_2.html
+/01_08_AddClass3_attr.html
+/01_08_AddClass3_attr2.html
+/01_08_AddClass3_attr3.html
+/01_08_AddClass3_attr4.html
 /01_08_AddClass3_attr5.html
 /01_09_Position_eq.html
 /01_09_Position_eq2.html
@@ -40,3 +76,5 @@
 /01_21_Prepend.html
 /01_21_plus_Append_clone.html
 /01_21_plus_Append_clone2.html
+/image/
+/module-info.class
