과제 및 백준

--- a/jQuery/bin/.gitignore
+++ b/jQuery/bin/.gitignore
@@ -1,8 +1,44 @@
+/01_21_01_Append.html
+/01_21_02_Prepend.html
+/01_21_03_Append_clone.html
+/01_21_04_After.html
+/01_21_05_Before.html
+/01_21_EX_Append_clone2.html
+/01_21_EX_Append_clone_ref.html
+/02_01_Event_on.html
+/02_01_Event_on2.html
+/02_01_Event_on2_ref.html
+/02_01_Event_on3_hover.html
+/02_01_Event_on3_mouseenter_mouseleave.html
+/02_02_EX_Event.html
+/02_02_Event_off.html
+/02_02_Event_one.html
+/02_03_Event_Trigger.html
+/02_03_Event_Trigger2.html
+/02_03_Event_Trigger3_clear.html
+/02_03_Event_Trigger3_clear2_restart.html
+/02_03_Event_Trigger3_clear2_restart2.html
+/02_04_Event_propagation.html
+/02_04_Event_propagation2_return_false.html
+/02_05_Event_on1_two_param.html
+/02_05_Event_on2_three_param2.html
+/02_06_01_Event_show.html
+/02_06_02_Event_hide.html
+/02_06_03_Event_toggle.html
+/02_06_04_Event_fadeToggle.html
+/02_06_05_Event_slideToggle.html
+/02_07_Opacity.html
+/02_07_Visibility.html
+/02_08_Keyup.html
+/02_09_Submit.html
+/02_10_Change_checkbox.html
 /02_10_Change_checkbox2_attr_problem.html
+/02_10_Change_checkbox3_prop.html
+/02_11_Change_radio.html
 /02_12_Chane_select.html
 /04_Check_Validity_ref.html
+/CSS_Login_Form_EX_origin.html
+/NewFile.css
 /idcheck.html
 /post.html
-/validate_ref.js
 /validate2.js
-/NewFile.css
