--- a/JSP/src/main/webapp/WEB-INF/web.xml
+++ b/JSP/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" 
-version="4.0">
-
-	<servlet>
-		<servlet-name>ServletTest</servlet-name>
-		<servlet-class>_1.ServletTest</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ServletTest</servlet-name>
-		<url-pattern>/ServletTest</url-pattern>
-	</servlet-mapping>
+<!-- 
+	* XML 선언문
+	일반적으로 XML 선언은 XML 문서의 첫 번째 줄에 나타난다.
+	XML 선언은 필수 항목이 아니지만 사용할 경우 문서에서 첫 번째 줄이어야 하며
+	그 앞에 다른 내용이나 공백이 없어야 한다.  
+ -->
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
+  <servlet>
+    <servlet-name>ServletTest</servlet-name>
+    <servlet-class>_1.ServletTest</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServletTest</servlet-name>
+    <url-pattern>/ServletTest</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Sample</display-name>
+    <servlet-name>Sample</servlet-name>
+    <servlet-class>_1.Sample</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Sample</servlet-name>
+    <url-pattern>/Sample</url-pattern>
+  </servlet-mapping>
 </web-app>
