--- a/JSP/src/main/webapp/WEB-INF/web.xml
+++ b/JSP/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,45 @@
     <servlet-name>Sample</servlet-name>
     <url-pattern>/Sample</url-pattern>
   </servlet-mapping>
+  
+  
+  <context-param>
+  	<description>로깅 여부</description>
+  	<param-name>logEnabled</param-name>
+  	<param-value>true</param-value>
+  </context-param>
+  <context-param>
+   	<description>로그 레벨</description>
+   	<param-name>logLevel</param-name>
+   	<param-value>info</param-value>
+  </context-param>
+  <context-param>
+  	<description>배경색</description>
+  	<param-name>color</param-name>
+  	<param-value>orange</param-value>
+  </context-param>
+  <context-param>
+  	<description>아이디</description>
+  	<param-name>id</param-name>
+  	<param-value>jsp</param-value>
+  </context-param>
+  <context-param>
+  	<description>비밀번호</description>
+  	<param-name>password</param-name>
+  	<param-value>jsp</param-value>
+  </context-param>
+  
+  
+  <error-page>
+	<error-code>404</error-code>
+	<location>/ex4_implicit_object/_6.exception/error/error404.jsp</location>
+  </error-page>
+  <error-page>
+	<error-code>500</error-code>
+	<location>/ex4_implicit_object/_6.exception/error/error500.jsp</location>
+  </error-page>
+  <error-page>
+	 <exception-type>java.lang.NullPointerException</exception-type>
+	 <location>/ex4_implicit_object/_6.exception/error/errorNullPointer.jsp</location>
+  </error-page>
 </web-app>
