--- a/Board_Ajax/src/main/webapp/WEB-INF/web.xml
+++ b/Board_Ajax/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,6 @@
   -->
   <error-page>
   	<error-code>404</error-code>
-  	<location>/error/error404.jsp</location>
+  	<location>/WEB-INF/views/error/error404.jsp</location>
   </error-page>
 </web-app>
