--- a/Board_Ajax/src/main/webapp/WEB-INF/web.xml
+++ b/Board_Ajax/src/main/webapp/WEB-INF/web.xml
@@ -7,34 +7,31 @@
  -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   
-  <!--  
+  <!-- url-pattern : 필터가 적용될 URL 패턴 -->
   <filter>
   		<filter-name>loginFilter</filter-name>
   		<filter-class>net.filter.action.LoginFilter</filter-class>
   	</filter>
   	<filter-mapping>
   		<filter-name>loginFilter</filter-name>
-  		<url-pattern>/list.net</url-pattern>
-  		<url-pattern>/update.net</url-pattern>
-  		<url-pattern>/updateProcess.net</url-pattern>
-  		<url-pattern>/info.net</url-pattern>
-  		<url-pattern>/delete.net</url-pattern>
-  		<url-pattern>/logout.net</url-pattern>
+  		<url-pattern>/members/logout</url-pattern>
+  		<url-pattern>/members/updateProcess</url-pattern>
+  		<url-pattern>/members/list</url-pattern>
+  		<url-pattern>/members/info</url-pattern>
+  		<url-pattern>/members/delete</url-pattern>
+  		<url-pattern>/boards/*</url-pattern>
   	</filter-mapping>
-  -->
   	<!-- admin 계정이어야 하는 경우 -->
-  <!-- 
   	<filter>
   		<filter-name>forbiddenFilter</filter-name>
   		<filter-class>net.filter.action.ForbiddenFilter</filter-class>
   	</filter>
   	<filter-mapping>
   		<filter-name>forbiddenFilter</filter-name>
-  		<url-pattern>/list.net</url-pattern>
-  		<url-pattern>/info.net</url-pattern>
-  		<url-pattern>/delete.net</url-pattern>
+  		<url-pattern>/members/list</url-pattern>
+  		<url-pattern>/members/info</url-pattern>
+  		<url-pattern>/members/delete</url-pattern>
   	</filter-mapping>
-  -->
   <!-- 
 		@WebServlet("*.net") 인 경우 
   		http://localhost:8088/JSP_Template/list 로 입력하면 404 오류 발생한다. (서버 단)
